# SAT-Solver

./: CMakeLists.txt  README.md
include/: CDCL.h  CDCLSolverIncremental.h  ClauseDatabase.h  ClauseMinimizer.h  DPLL.h  HybridMaxSATSolver.h  MaxSATSolver.h  PortfolioManager.h  Preprocessor.h  SATInstance.h  WeightedMaxSATSolver.h
src/: CDCL.cpp  CDCLSolverIncremental.cpp  ClauseDatabase.cpp  ClauseMinimizer.cpp  DPLL.cpp  HybridMaxSATSolver.cpp  IncrementalQueensSolver.cpp  MaxSATSolver.cpp  PortfolioManager.cpp  Preprocessor.cpp  WeightedMaxSATSolver.cpp  main.cpp  main_incremental.cpp  main_maxsat.cpp  main_portfolio.cpp  main_preprocessor.cpp
